hw2-app/static/style.css
/* 
    Chomsky import: https://www.onlinewebfonts.com/download/00048069ded7ec58aa6b96ccaff5f759
*/
@import url("https://db.onlinewebfonts.com/c/00048069ded7ec58aa6b96ccaff5f759?family=Chomsky");

/* Refactoring code becuase it kinda sucks?! */

body{
    padding: 20px;
}

.header{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.header-left, .header-right{
    flex: 1;
    min-width: 0;
}

.header, p{
    margin: 0;
}

h2, p{
    font-family: Georgia;
}

#formattedDate{
    font-weight: bold;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.title{
    font-family: 'Chomsky';
    text-align: center;
    margin: 0;
    font-size: 75px;
}

a, .locations{
    color: black;
    font-size: 11px;
    text-decoration: none;
    display: flex;
    gap: 20px;
    padding: 0px;
    justify-content: center;
}

li{
    list-style-type: none;
    display: inline;
}

.header-border{
    margin: 0;
}

.grid-element{
    /* height: 600px; */
    display: flex;
    flex-direction: column;
    overflow: hidden;
    border-top: 1px solid #DFDFDF;
}

.grid-element:not(:first-child){
    padding-top: 20px;
}

.grid{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    /* grid-template-columns: repeat(3, 1fr); */
    gap: 10px; 
}

.row1col{ 
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.row1col img{
    width: 100%;
    height: auto;
}


.row-element-1{
    display: flex;
}

.articleHeader{
    margin: 0;
}

hr{
    border: none;
    border-top: 1px solid #DFDFDF;
}

.thin-h2{
    font-weight: 400;
    font-size: xx-large;
}

.top-row{
    margin-top: 0;
}

h2{
    font-size: xx-large;
}

p{
    color: #5A5A5A;
}

.center-col{
    display:block;
}

.row1col{
    border-right: 1px solid #DFDFDF;
    min-width: 0;
}

.row1col:first-child{
    padding: 20px 20px 0px 0px;
}

.row1col:nth-child(2){
    padding: 20px 20px 0px 20px;
}

.row1col:last-child{
    border-right: none;
    padding: 20px 0px 0px 20px;
}

.row1col img{
    max-width: 100%;
    height: auto;
}

.hr-right{
    margin: 19% 0px 0px 0px;
    width: 99%;
    border: none;
    /* border-top: 1px solid #DFDFDF; */
}

.hr-center{
    margin: 28.5% 0px 0px 0px;
    width: 99%;
    border: none;
    /* border-top: 1px solid #DFDFDF; */
}

.hr-left{
    margin: 30% 0px 0px 0px;
    width: 99%;
    border: none;
    /* border-top: 1px solid #DFDFDF; */
}

.basketball-img{
    height:250px;
}

.building-img{
    display: block;
    height: 250px;
    margin: 20px auto 0 auto;
}

.food-img{
    height: 250px;
}

.center-bottom{
    left: 10px;
    margin-left: 20px;
}

.footer{
    width: 90%;
    border-width: 3px;
    border-color: black;
}

@media only screen and (max-width: 1024px){
    #formattedDate, .today{
        display: none;
    }
}

@media only screen and (max-width: 767px){
    .grid{
        grid-template-columns: 1fr;
    }

    .row-element-1{
        display: grid;
        grid-template-columns: 100%;
    }

    .row1col:nth-child(2){
        grid-column: 1;
        padding: 20px 20px 0px 20px;
        border: none;
    }

    .row1col:first-child, .row1col:last-child{
        display: none !important;
    }

    .building-img{
        height: 20%;
    }

    .footer{
        display: none;
    }

    .title{
        font-size: 50px;
    }
}

@media only screen and (max-width: 1024px) and (min-width: 768px){
    .grid{
        grid-template-columns: 1fr 1fr;
    }

    .row-element-1{
        display: grid;
        grid-template-columns: 60% 40%;
    }

    .hr-center, .hr-left, .hr-right{
        margin: 10px;
    }

    .row1col:nth-child(2){
        grid-column: 1;
        padding: 20px 20px 0px 20px;
    }

    .row1col:first-child{
        grid-column: 2;
        grid-row: 1;
        padding: 20px 20px 25px 20px;
        border-right: none;
    }

    .row1col:last-child{
        grid-column: 2;
        grid-row: 2;
        padding: 20px 0px 0px 20px;
        border-right: none;
    }
} 

